--- a/package.json
+++ b/package.json
@@ -14,22 +14,30 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@dev-event/react-native-accordion": "^2.0.4",
+    "@ethersproject/bignumber": "^5.7.0",
+    "@ethersproject/providers": "^5.7.1",
     "@expo/vector-icons": "^12.0.0",
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
-    "@walletconnect/react-native-dapp": "^1.7.0",
+    "@walletconnect/react-native-dapp": "^1.8.0",
+    "@walletconnect/web3-provider": "^1.8.0",
     "base-64": "^1.0.0",
     "crypto-browserify": "^3.12.0",
+    "ethers": "^5.7.1",
     "expo": "~44.0.0",
     "expo-asset": "~8.4.4",
-    "expo-constants": "~13.0.0",
+    "expo-constants": "~13.0.1",
+    "expo-document-picker": "~10.1.3",
     "expo-font": "~10.0.4",
+    "expo-image-picker": "^13.3.1",
     "expo-linking": "~3.0.0",
     "expo-splash-screen": "~0.14.0",
     "expo-status-bar": "~1.2.0",
     "expo-web-browser": "~10.1.0",
+    "firebase": "^9.6.11",
     "https-browserify": "^1.0.0",
     "node-libs-react-native": "^1.2.1",
     "os-browserify": "^0.3.0",
@@ -37,6 +45,9 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-accordion-list-view": "^1.0.4",
+    "react-native-autogrow-textinput": "^5.4.0",
+    "react-native-dotenv": "^3.3.1",
     "react-native-get-random-values": "~1.7.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
@@ -50,7 +61,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
-    "@types/react-native": "~0.64.12",
+    "@types/react-native": "^0.64.28",
     "@types/xml2js": "^0.4.11",
     "jest": "^26.6.3",
     "jest-expo": "~44.0.1",
