--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "expo-constants": "~13.0.1",
     "expo-document-picker": "~10.1.3",
     "expo-font": "~10.0.4",
-    "expo-image-picker": "^13.3.1",
+    "expo-image-picker": "~12.0.1",
     "expo-linking": "~3.0.0",
     "expo-splash-screen": "~0.14.0",
     "expo-status-bar": "~1.2.0",
