--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "expo-asset": "~8.4.4",
     "expo-constants": "~13.0.1",
     "expo-document-picker": "~10.1.3",
+    "expo-downloads-manager": "^1.0.2",
     "expo-font": "~10.0.4",
     "expo-image-picker": "~12.0.1",
     "expo-linking": "~3.0.0",
@@ -49,8 +50,10 @@
     "react-native-autogrow-textinput": "^5.4.0",
     "react-native-dotenv": "^3.3.1",
     "react-native-get-random-values": "~1.7.0",
+    "react-native-read-more-text": "^1.1.2",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
+    "react-native-status-bar-height": "^2.6.0",
     "react-native-tcp": "^4.0.0",
     "react-native-web": "0.17.1",
     "readable-stream": "^3.6.0",
