--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@expo/vector-icons": "^12.0.0",
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
+    "@react-navigation/material-top-tabs": "^6.3.0",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "@walletconnect/react-native-dapp": "^1.8.0",
@@ -54,11 +55,14 @@
     "react-native-autogrow-textinput": "^5.4.0",
     "react-native-dotenv": "^3.3.1",
     "react-native-get-random-values": "~1.7.0",
+    "react-native-paper": "^4.12.5",
     "react-native-read-more-text": "^1.1.2",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-status-bar-height": "^2.6.0",
+    "react-native-tab-view": "^3.3.0",
     "react-native-tcp": "^4.0.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "0.17.1",
     "readable-stream": "^3.6.0",
     "stream-http": "^3.2.0",
