--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "@dev-event/react-native-accordion": "^2.0.4",
     "@ethersproject/bignumber": "^5.7.0",
     "@ethersproject/providers": "^5.7.1",
-    "@expo/vector-icons": "^12.0.0",
-    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/material-top-tabs": "^6.3.0",
     "@react-navigation/native": "^6.0.2",
@@ -29,18 +29,18 @@
     "base-64": "^1.0.0",
     "crypto-browserify": "^3.12.0",
     "ethers": "^5.7.1",
-    "expo": "~44.0.0",
-    "expo-asset": "~8.4.4",
-    "expo-constants": "~13.0.1",
-    "expo-document-picker": "~10.1.3",
+    "expo": "^47.0.0",
+    "expo-asset": "~8.6.2",
+    "expo-constants": "~14.0.2",
+    "expo-document-picker": "~11.0.1",
     "expo-downloads-manager": "^1.0.2",
-    "expo-font": "~10.0.4",
-    "expo-image-picker": "~12.0.1",
-    "expo-linking": "~3.0.0",
-    "expo-splash-screen": "~0.14.0",
-    "expo-status-bar": "~1.2.0",
-    "expo-updates": "~0.11.7",
-    "expo-web-browser": "~10.1.0",
+    "expo-font": "~11.0.1",
+    "expo-image-picker": "~14.0.2",
+    "expo-linking": "~3.2.3",
+    "expo-splash-screen": "~0.17.5",
+    "expo-status-bar": "~1.4.2",
+    "expo-updates": "~0.15.6",
+    "expo-web-browser": "~12.0.0",
     "firebase": "^9.6.11",
     "https-browserify": "^1.0.0",
     "node-libs-react-native": "^1.2.1",
@@ -48,36 +48,36 @@
     "patch-package": "^6.4.7",
     "path-browserify": "^1.0.1",
     "postinstall-postinstall": "^2.1.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-native": "0.70.5",
     "react-native-accordion-list-view": "^1.0.4",
     "react-native-autogrow-textinput": "^5.4.0",
     "react-native-dotenv": "^3.3.1",
-    "react-native-get-random-values": "~1.7.0",
+    "react-native-get-random-values": "~1.8.0",
     "react-native-paper": "^4.12.5",
     "react-native-read-more-text": "^1.1.2",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.10.1",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-tab-view": "^3.3.0",
     "react-native-tcp": "^4.0.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "0.17.1",
+    "react-native-web": "~0.18.7",
     "readable-stream": "^3.6.0",
     "stream-http": "^3.2.0",
     "vm-browserify": "^1.1.2",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@types/react": "~17.0.21",
-    "@types/react-native": "^0.64.28",
+    "@babel/core": "^7.19.3",
+    "@types/react": "~18.0.24",
+    "@types/react-native": "~0.70.6",
     "@types/xml2js": "^0.4.11",
     "jest": "^26.6.3",
-    "jest-expo": "~44.0.1",
+    "jest-expo": "^47.0.0",
     "react-test-renderer": "17.0.1",
-    "typescript": "~4.3.5"
+    "typescript": "^4.6.3"
   },
   "private": true
 }
